[package]
name = "procmacro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = {version="1.0", features=["extra-traits"]}
proc-macro2 = {version="1.0"}

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/program.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }